WSF-5811 use date format strings for better readability

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -58,10 +58,6 @@
   #RewriteCond %{HTTP:X-Forwarded-Host} .
   # RewriteRule ^/au/help/contact-us/?$ http://%{HTTP:X-Forwarded-Host}/ [R,L]
   
-  # /unsubscribe
-  RewriteCond %{HTTP:X-Forwarded-Host} .
-  RewriteRule ^/unsubscribe/?$ https://secure.westfield.com.au/unsubscribe [R,L]
-
   # /au/brands/<brand_name> => http://westfield.com.au/products?brands=<brand_name>
   RewriteCond %{HTTP:X-Forwarded-Host} .
   RewriteRule ^/au/brands/(.*)/?$ http://%{HTTP:X-Forwarded-Host}/products?brand=$1 [R,L]
@@ -69,6 +65,27 @@
   # /<centre_name>/centre-information/shopping-hours => http://westfield.com.au/<centre_name>/hours
   RewriteCond %{HTTP:X-Forwarded-Host} .
   RewriteRule ^/(.*)/centre-information/shopping-hours/?$ http://%{HTTP:X-Forwarded-Host}/$1/hours [R,L]
+
+  # ================================================================
+  # If you wish to use date expiries on redirects (ie; for vanity domains, use the following Conditional)
+  # RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20130122
+ 
+  # [2013-10-21 mcinerney] Looks to still be needed as page renders in customerconsole.
+  RewriteRule ^/sydneycentralplaza/?$ http://%{HTTP:X-Forwarded-Host}/sydney/ [R=301,L]
+  RewriteRule ^/sydneycentralplaza/(.*) http://%{HTTP:X-Forwarded-Host}/sydney/$1 [R=301,L]
+
+  # [2013-10-21 mcinerney] Until such time as we can stop advertising this, it looks like we still need it.
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)westfield\.com\.au$
+  RewriteRule ^/retailservices/?$ https://secure.retailedge.com.au/accounts-payable/login.html [R=301,L]
+   
+  # FB 20299 - [2013-10-21 mcinerney] Do you have a new home for National Centres? If not either
+  # drop the redirect or send it to /
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)westfield\.com\.au$
+  RewriteRule ^/centres/?$ http://www.westfield.com.au/ [R=301,L]
+
+  #FB 21192 - US newsletter unsubscribe
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)westfield\.com$
+  RewriteRule ^/unsubscribe/?$ https://secure.westfield.com/unsubscribe/ [R=301,L]
 </VirtualHost>
 
 <VirtualHost *:443>
