--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-unstable": "~1.1.5",
     "script.js": "*",
     "jquery-pjax": "~1.7.3",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "fastclick": "~0.6.10"
   },
   "devDependencies": {
     "sinon": "~1.7.3",
