Add centre and stream service to foreman config

--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,7 @@ UNICORN_TIMEOUT=30
 UNICORN_PRELOAD_APP=false
 PRODUCT_SERVICE_PORT=3008
 PRODUCT_SERVICE_HOME=../product_service
+CENTRE_SERVICE_PORT=3005
+CENTRE_SERVICE_HOME=../centre_service
+STREAM_SERVICE_PORT=3011
+STREAM_SERVICE_HOME=../stream_service
