--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular": "1.2.0-rc.3",
     "angular-animate": "1.2.0-rc.3",
     "angular-sanitize": "1.2.0-rc.3",
-    "angular-touch": "1.2.0-rc.3"
+    "angular-touch": "1.2.0-rc.3",
+    "angular-route": "1.2.0-rc.3"
   },
   "devDependencies": {
     "sinon": "~1.7.3",
