--- a/customer_console.conf
+++ b/customer_console.conf
@@ -86,6 +86,54 @@
   #FB 21192 - US newsletter unsubscribe
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)westfield\.com$
   RewriteRule ^/unsubscribe/?$ https://secure.westfield.com/unsubscribe/ [R=301,L]
+  
+  # [2013-11-12 gcallister] Add redirects for WA centres retailer pages
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule  ^/au/retailers/([a-z0-9])(.*)/(carousel|inaloo|whitfordcity)$ /$3/stores/$1 [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from national offers for carousel
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteCond %{QUERY_STRING} ^centres=carousel$
+  RewriteRule ^/au/offers$ /carousel/deals [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from national offers for innaloo
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteCond %{QUERY_STRING} ^centres=innaloo$
+  RewriteRule ^/au/offers$ /innaloo/deals [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from national offers for whitfordcity 
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteCond %{QUERY_STRING} ^centres=whitfordcity$
+  RewriteRule ^/au/offers$ /whitfordcity/deals [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from WA centres for centre-information
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule ^/(carousel|innaloo|whitfordicty)/centre-information/?$ /$1/info [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from WA centres for news and events to events page
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule ^/(carousel|innaloo|whitfordicty)/news-and-events/?$ /$1/events [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from WA centres for getting here
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule ^/(carousel|innaloo|whitfordicty)/centre-information/?$ /$1/info#getting-here [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from WA centres for parking info
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule ^/(carousel|innaloo|whitfordicty)/centre-information/?$ /$1/info#parking [R=301,L]
+  
 </VirtualHost>
 
 <VirtualHost *:443>
