WSF-4921 Add further redirects for AU competition page
Page has been moved to the AU blog as we don't support generic content on the new website.

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -134,6 +134,11 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
   RewriteRule ^/(carousel|innaloo|whitfordicty)/centre-information/?$ /$1/info#parking [R=301,L]
   
+  # [2013-11-12 gcallister] Add redirects from national competition winners page to AU blog.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule /au/be-inspired/competitions/2013/westfield-member-giveway/winners http://blog.westfield.com.au/competition-winners/ [R=301,L]
+  
 </VirtualHost>
 
 <VirtualHost *:443>
