--- a/customer_console.conf
+++ b/customer_console.conf
@@ -147,10 +147,11 @@ AddDefaultCharset utf-8
         </IfModule>
     </IfModule>
 
+    <IfModule !mod_filter>
+      LoadModule filter_module modules/mod_filter.so
+    </IfModule>
+
     # Compress all output labeled with one of the following MIME-types
-    # (for Apache versions below 2.3.7, you don't need to enable `mod_filter`
-    # and can remove the `<IfModule mod_filter.c>` and `</IfModule>` lines
-    # as `AddOutputFilterByType` is still in the core directives).
     <IfModule mod_filter.c>
         AddOutputFilterByType DEFLATE application/atom+xml \
                                       application/javascript \
