Update redirects to include SA
Update redirects to include SA centres

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -87,11 +87,11 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)westfield\.com$
   RewriteRule ^/unsubscribe/?$ https://secure.westfield.com/unsubscribe/ [R=301,L]
   
-  # [2013-11-12 gcallister] Add redirects for WA centres retailer pages
+  # [2013-11-13 gcallister] Add redirects for WA and SA centres retailer pages
   #                         Will only start working once customer console has /au routed to it.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
-  RewriteRule  ^/au/retailers/([a-z0-9])(.*)/(carousel|inaloo|whitfordcity)$ /$3/stores/$1 [R=301,L]
+  RewriteRule  ^/au/retailers/([a-z0-9])(.*)/(carousel|inaloo|whitfordcity|marion|teatreeplaza|westlakes)$ /$3/stores/$1 [R=301,L]
 
   # [2013-11-12 gcallister] Add redirects from national offers for carousel
   #                         Will only start working once customer console has /au routed to it.
@@ -114,25 +114,46 @@
   RewriteCond %{QUERY_STRING} ^centres=whitfordcity$
   RewriteRule ^/au/offers$ /whitfordcity/deals [R=301,L]
 
-  # [2013-11-12 gcallister] Add redirects from WA centres for centre-information
+  # [2013-11-13 gcallister] Add redirects from national offers for marion 
+  #                         Will only start working once customer console has /au routed to it.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
-  RewriteRule ^/(carousel|innaloo|whitfordicty)/centre-information/?$ /$1/info [R=301,L]
+  RewriteCond %{QUERY_STRING} ^centres=marion$
+  RewriteRule ^/au/offers$ /marion/deals [R=301,L]
 
-  # [2013-11-12 gcallister] Add redirects from WA centres for news and events to events page
+  # [2013-11-13 gcallister] Add redirects from national offers for teatreeplaza
+  #                         Will only start working once customer console has /au routed to it.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
-  RewriteRule ^/(carousel|innaloo|whitfordicty)/news-and-events/?$ /$1/events [R=301,L]
+  RewriteCond %{QUERY_STRING} ^centres=teatreeplaza$
+  RewriteRule ^/au/offers$ /teatreeplaza/deals [R=301,L]
 
-  # [2013-11-12 gcallister] Add redirects from WA centres for getting here
+  # [2013-11-13 gcallister] Add redirects from national offers for westlakes
+  #                         Will only start working once customer console has /au routed to it.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
-  RewriteRule ^/(carousel|innaloo|whitfordicty)/centre-information/?$ /$1/info#getting-here [R=301,L]
+  RewriteCond %{QUERY_STRING} ^centres=westlakes$
+  RewriteRule ^/au/offers$ /westlakes/deals [R=301,L]
 
-  # [2013-11-12 gcallister] Add redirects from WA centres for parking info
+# [2013-11-12 gcallister] Add redirects from WA and SA centres for centre-information
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
-  RewriteRule ^/(carousel|innaloo|whitfordicty)/centre-information/?$ /$1/info#parking [R=301,L]
+  RewriteRule ^/(carousel|innaloo|whitfordicty|marion|teatreeplaza|westlakes)/centre-information/?$ /$1/info [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from WA and SA centres for news and events to events page
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule ^/(carousel|innaloo|whitfordicty|marion|teatreeplaza|westlakes)/news-and-events/?$ /$1/events [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from WA and SA centres for getting here
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule ^/(carousel|innaloo|whitfordicty|marion|teatreeplaza|westlakes)/centre-information/?$ /$1/info#getting-here [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from WA and SA centres for parking info
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
+  RewriteRule ^/(carousel|innaloo|whitfordicty|marion|teatreeplaza|westlakes)/centre-information/?$ /$1/info#parking [R=301,L]
   
   # [2013-11-12 gcallister] Add redirects from national competition winners page to AU blog.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
