WSF-5728 ensure deflate_module is loaded before using filters

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -136,6 +136,10 @@ AddDefaultCharset utf-8
 # | Compression |
 # ------------------------------------------------------------------------------
 
+<IfModule !mod_deflate>
+  LoadModule deflate_module modules/mod_deflate.so
+</IfModule>
+
 <IfModule mod_deflate.c>
 
     # Force compression for mangled headers.
