fix some incorrect redirects

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -148,12 +148,12 @@
   # [2013-11-12 gcallister] Add redirects from WA and SA centres for getting here
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
-  RewriteRule ^/(carousel|innaloo|whitfordicty|marion|teatreeplaza|westlakes)/centre-information/?$ /$1/info#getting-here [R=301,L]
+  RewriteRule ^/(carousel|innaloo|whitfordicty|marion|teatreeplaza|westlakes)/getting-here/?$ /$1/info#getting-here [R=301,L]
 
   # [2013-11-12 gcallister] Add redirects from WA and SA centres for parking info
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.)(uat\.)?westfield\.com\.au$
-  RewriteRule ^/(carousel|innaloo|whitfordicty|marion|teatreeplaza|westlakes)/centre-information/?$ /$1/info#parking [R=301,L]
+  RewriteRule ^/(carousel|innaloo|whitfordicty|marion|teatreeplaza|westlakes)/centre-information/parking?$ /$1/info#parking [R=301,L]
   
   # [2013-11-12 gcallister] Add redirects from national competition winners page to AU blog.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
