more redirect fixes

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -27,6 +27,10 @@
 
   RewriteEngine On
 
+  # Sometimes we need to adjust fields with there context, the following values will allow you to lower/upper as required
+  RewriteMap lc int:tolower
+  RewriteMap uc int:toupper
+
   # ================================================================
   # If you wish to use date expiries on redirects (ie; for vanity domains, use the following Conditional)
   # RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20130122
@@ -39,7 +43,7 @@
   # /au/retailers/<retailer_code> => http://beta.westfield.com.au/products?retailer=<retailer_code>
   # Match www.westfield.com.au, www.uat.westfield.com and wwwau.systest.dbg.westfield.com
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/au/retailers/(.*)/? http://%{HTTP:X-Forwarded-Host}/products?retailer=$1 [R=301,L]
+  RewriteRule ^/au/retailers/([a-z0-9]+)/?$ http://%{HTTP:X-Forwarded-Host}/products?retailer=$1 [R=301,L]
 
   # /m/au/centres/bondijunction/shopping-hours => /bondijunction/hours
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
@@ -101,7 +105,7 @@
   #                         Will only start working once customer console has /au routed to it.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule  ^/au/retailers/([a-z0-9])*/([a-z]+)$ http://%{HTTP:X-Forwarded-Host}/$3/stores?letter=${uppercase:$1} [R=301,L]
+  RewriteRule  ^/au/retailers/([a-z0-9])(.*)/([a-z]+)$ http://%{HTTP:X-Forwarded-Host}/$3/stores?letter=${uc:$1} [R=301,L]
 
   # [2013-11-12 gcallister] Add redirects from national offers for carousel
   #                         Will only start working once customer console has /au routed to it.
