add NE flag to stop apache encoding the hashes/bookmark on certain redirects

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -162,12 +162,12 @@
   # [2013-11-12 gcallister] Add redirects from WA and SA centres for getting here
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/([a-z]+)/getting-here/?$ http://%{HTTP:X-Forwarded-Host}/$1/info#getting-here [R=301,L]
+  RewriteRule ^/([a-z]+)/getting-here/?$ http://%{HTTP:X-Forwarded-Host}/$1/info#getting-here [NE,R=301,L]
 
   # [2013-11-12 gcallister] Add redirects from WA and SA centres for parking info
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/([a-z]+)/centre-information/parking?$ http://%{HTTP:X-Forwarded-Host}/$1/info#parking [R=301,L]
+  RewriteRule ^/([a-z]+)/centre-information/parking?$ http://%{HTTP:X-Forwarded-Host}/$1/info#parking [NE,R=301,L]
   
   # [2013-11-12 gcallister] Add redirects from national competition winners page to AU blog.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
