Add redirects from national offers for ALL centres

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -149,7 +149,245 @@
   RewriteCond %{QUERY_STRING} ^centres=westlakes$
   RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/westlakes/deals [R=301,L]
 
-# [2013-11-12 gcallister] Add redirects from WA and SA centres for centre-information
+  # [2013-11-15 gcallister] Add redirects from national offers for carindale
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=carindale$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/carindale/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for chermside
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=chermside$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/chermside/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for gardencity
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=gardencity$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/gardencity/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for helensvale
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=helensvale$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/helensvale/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for northlakes
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=northlakes$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/northlakes/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for strathpine
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=strathpine$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/strathpine/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for belconnen
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=belconnen$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/belconnen/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for woden
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=woden$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/woden/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for bondijunction
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=bondijunction$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/bondijunction/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for burwood
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=burwood$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/burwood/deals [R=301,L]
+
+   # [2013-11-15 gcallister] Add redirects from national offers for chatswood
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=chatswood$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/chatswood/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for eastgardens
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=eastgardens$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/eastgardens/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for figtree
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=figtree$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/figtree/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for hornsby
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=hornsby$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/hornsby/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for hurstville
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=hurstville$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/hurstville/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for kotara
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=kotara$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/kotara/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for liverpool
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=liverpool$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/liverpool/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for miranda
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=miranda$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/miranda/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for mtdruitt
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=mtdruitt$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/mtdruitt/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for northrocks
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=northrocks$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/northrocks/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for parramatta
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=parramatta$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/parramatta/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for penrith
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=penrith$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/penrith/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for sydney
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=sydney$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/sydney/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for tuggerah
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=tuggerah$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/tuggerah/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for warrawong
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=warrawong$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/warrawong/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for warringahmall
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=warringahmall$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/warringahmall/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for airportwest
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=airportwest$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/airportwest/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for caseycentral
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=caseycentral$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/caseycentral/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for doncaster
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=doncaster$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/doncaster/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for fountaingate
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=fountaingate$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/fountaingate/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for geelong
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=geelong$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/geelong/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for knox
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=knox$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/knox/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for plentyvalley
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=plentyvalley$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/plentyvalley/deals [R=301,L]
+
+  # [2013-11-15 gcallister] Add redirects from national offers for southland
+  #                         Will only start working once customer console has /au routed to it.
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteCond %{QUERY_STRING} ^centres=southland$
+  RewriteRule ^/au/offers$ http://%{HTTP:X-Forwarded-Host}/southland/deals [R=301,L]
+
+  # [2013-11-12 gcallister] Add redirects from WA and SA centres for centre-information
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/([a-z]+)/centre-information/?$ http://%{HTTP:X-Forwarded-Host}/$1/info [R=301,L]
