fixed redirect for burwood getting-here, it would have been redirected to sydney

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -436,7 +436,7 @@
 
   # Additional Centre Getting here pages
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  ^/(burwood|sydney)/getting-here http://%{HTTP:X-Forwarded-Host}/sydney/info#getting-here [NE,R=301,L]
+  ^/(burwood|sydney)/getting-here http://%{HTTP:X-Forwarded-Host}/$1/info#getting-here [NE,R=301,L]
 
   # Catch all for "Centre Services"
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
