--- a/customer_console.conf
+++ b/customer_console.conf
@@ -191,6 +191,14 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/(.*)/general_information/privacy_policy/?$ http://%{HTTP:X-Forwarded-Host}/privacy-policy [R=301,L]
 
+  # Vanity URL for Gift Cards (AU)
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/giftcards?$ https://www.westfieldgiftcards.com.au/ [R=301,L]
+
+  # OPS-7735, OPS-7737
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/au/assets/pdfs/competitions/westfield-christmas-happy-giving-tcs-141113.pdf$ http://res.cloudinary.com/wlabs/image/upload/v1384840726/zwro6xviegpbslcvoasf.pdf [R=301,L]
+
 </VirtualHost>
 
 <VirtualHost *:443>
