fix giftcard / giftcards vanity URL redirect to cope with trailing slash

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -218,7 +218,7 @@
 
   # Vanity URL for Gift Cards (AU)
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/giftcards?$ https://www.westfieldgiftcards.com.au/ [R=301,L]
+  RewriteRule ^/giftcards?/?$ https://www.westfieldgiftcards.com.au/ [R=301,L]
 
   # OPS-7735, OPS-7737
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
