fix redirects to point to non-permanently moved pages

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -201,7 +201,7 @@
   # National Contact us to Corporate Contact us.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/au/help/contact-us/?$ http://corporate.westfield.com/contact [R=301,L]
+  RewriteRule ^/au/help/contact-us/?$ http://corporate.westfield.com/contact/ [R=301,L]
   
   # Privacy Policy - Redirect National and Centre to the new National version.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
@@ -218,7 +218,7 @@
 
   # Vanity URL for Gift Cards (AU)
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/giftcards?/?$ https://www.westfieldgiftcards.com.au/ [R=301,L]
+  RewriteRule ^/giftcards?/?$ https://www.westfieldgiftcards.com.au/Online [R=301,L]
 
   # OPS-7735, OPS-7737
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
