--- a/customer_console.conf
+++ b/customer_console.conf
@@ -228,12 +228,12 @@
 # [2013-11-28 gcallister] Add redirects for wifi Carindale
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/carindale/wifi/?$ http://%{HTTP:X-Forwarded-Host}/carindale/ [R=301,L]
+  RewriteRule ^/carindale/wifi/?$ http://www.westfieldfreewifi.com/carindale/ [R=301,L]
 
 # [2013-11-28 gcallister] Add redirects for wifi Sydney
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/sydney/wifi/?$ http://%{HTTP:X-Forwarded-Host}/sydney/ [R=301,L]
+  RewriteRule ^/sydney/wifi/?$ http://www.westfieldfreewifi.com/sydney/ [R=301,L]
 
 # [2013-11-28 gcallister] Add redirects for wifi Geelong
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
