Added redirect for incorrect movie urls

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -240,6 +240,10 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/geelong/wifi/?$ http://%{HTTP:X-Forwarded-Host}/geelong/ [R=301,L]
 
+# [2013-12-3 csmith] Redirect incorrect movie urls to the correct one, eg bondijunction/bondijunction/movies/the-butler/279 -> bondijunction/movies/the-butler/279
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/(.+?)/(.+?)/movies/(.+?)/(.+?)$ http://%{HTTP:X-Forwarded-Host}/$1/movies/$3/$4 [R=301,L]
+
 </VirtualHost>
 
 <VirtualHost *:443>
