OPS-7809 add case insensitive vanity url redirect off westfield.com.au for brandspace

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -244,6 +244,10 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/(.+?)/(.+?)/movies/(.+?)/(.+?)$ http://%{HTTP:X-Forwarded-Host}/$1/movies/$3/$4 [R=301,L]
 
+  # Vanity URL for Brandspace (AU)
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/brandspace/?$ https://www.westfieldbrandspace.com.au/ [NC,R=301,L]
+
 </VirtualHost>
 
 <VirtualHost *:443>
