--- a/customer_console.conf
+++ b/customer_console.conf
@@ -213,6 +213,16 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/au/help/privacy-policy/?$ http://%{HTTP:X-Forwarded-Host}/privacy-policy [R=301,L]
 
+  # Help - Redirect all help
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/au/help/.* http://%{HTTP:X-Forwarded-Host}/ [R=301,L]
+
+  # Gifts - Redirect all gifts to national product
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/au/gifts/.* http://%{HTTP:X-Forwarded-Host}/products/ [R=301,L]
+
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/(.*)/privacy-policy/?$ http://%{HTTP:X-Forwarded-Host}/privacy-policy [R=301,L]
